Update theme resources

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/signin.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/signin.html
@@ -17,12 +17,14 @@ base_url: "../../"
             <div class="app-signin-content page-body" id="app-signin-body">
                 <form class="app-signin-form enableAutoFocus" action="." id="login_form" method="post">
                     <div class="app-signin-group" id="login-form">
-                        <div class="container">
-                            <div class="control-group app-signin-control">
-                                <label for="__ac_name">E-Mail-Adresse</label>
-                                <input class="form-control" type="text" id="__ac_name" value="" name="__ac_name" size="15">
+                        <div class="control-group app-signin-control app-signin-control-bordered">
+                            <div class="container">
+                            <label for="__ac_name">E-Mail-Adresse</label>
+                            <input class="form-control" type="text" id="__ac_name" value="" name="__ac_name" size="15">
                             </div>
-                            <div class="control-group app-signin-control">
+                        </div>
+                        <div class="control-group app-signin-control">
+                            <div class="container">
                                     <label for="__ac_password">Passwort</label>
                                     <input  class="form-control" type="password" id="__ac_password" name="__ac_password" size="15">
                             </div>
