--- a/src/klikev.sitetheme/klikev/sitetheme/resources/index.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Getting started
+title: Kontaktladen
 slug: getting-started
-lead: "An overview of the new diazo theme"
+lead: "Für junge Menschen auf der Straße"
 base_url: "../"
 ---
 <main class="app-content-body">
