Add donation template

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
@@ -12,6 +12,9 @@ base_url: "../../"
         <div class="col-xs-12 col-sm-4">
           <div class="splashbox">
             <div class="splashbox-header">
+              <div class="splashbox-icon">
+                <i class="fa fa-smile-o fa-2x"></i>
+              </div>
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle-o fa-stack-2x"></i>
                 <i class="fa fa-smile-o fa-stack-1x"></i>
@@ -19,12 +22,12 @@ base_url: "../../"
             </div>
             <div class="app-box">
               <div class="app-box-header">
-                <div class="h4 app-box-headline">
-                  Headline
+                <div class="h5 app-box-headline">
+                  Unser Angebot an dich
                 </div>
               </div>
               <div class="app-box-content">
-                <p>This is a test text for this content block</p>
+                <p>Bei uns können sich junge Menschen miteinander treffen, sich und seine Kleidung waschen und etwas Warmes essen. Als Kern unserer Aufgabe sehen wir die konstruktive Begleitung und Beratung junger Menschen. Wir ergreifen Partei und haben ein offenes Ohr für alle Themen, die das Leben auf der Straße betreffen.</p>
               </div>
             </div>
           </div>
@@ -38,13 +41,13 @@ base_url: "../../"
               </span>
             </div>
             <div class="app-box">
-              <div class="appbox-header">
-                <div class="h4 app-box-headline">
-                  Headline
+              <div class="app-box-header">
+                <div class="h5 app-box-headline">
+                  Du willst helfen
                 </div>
               </div>
               <div class="app-box-content">
-                  <p>This is a test text for this content block</p>
+                  <p>Wir möchten eine möglichst breite Betreuung unserer Klient*innen anbieten. Dazu brauchen wir ein starkes Netzwerk von Kooperationspartnern und Förderern. Wir freuen uns immer über ehrenamtliche Helfer und Praktikanten, die Ihre Zeit und ihr Wissen in unsere jungen Menschen auf der Straße investieren möchten.</p>
               </div>
             </div>
           </div>
@@ -58,9 +61,9 @@ base_url: "../../"
               </span>
             </div>
             <div class="app-box">
-              <div class="appbox-header">
-                <div class="h4 app-box-headline">
-                  Headline
+              <div class="app-box-header">
+                <div class="h5 app-box-headline">
+                  Aktuelles
                 </div>
               </div>
               <div class="app-box-content">
@@ -73,8 +76,9 @@ base_url: "../../"
     </div>
     <hr>
     <div class="app-splashbar text-center">
-      <h5>Spendenaufruf</h5>
-      <a class="btn btn-primary btn-lg" href="/spenden">Jetzt Spenden!</a>
+      <h5>Sie möchten unsere Arbeit unterstützen?</h5>
+      <p><a class="btn btn-primary btn-lg" href="/spenden">Jetzt Spenden!</a></p>
+      <p class="text-muted">Das klik freut sich auch über Sachspenden wie zum Beispiel saubere Kleidung. Rufen Sie uns bei Fragen hierzu gerne an. </p>
     </div>
     <hr>
     <div class="app-splashbar text-center">
