Update gruntfile and rebuild

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: landingpage
 title: Kontaktladen
 slug: getting-started
 lead: "Für junge Menschen auf der Straße"
@@ -15,10 +15,6 @@ base_url: "../../"
               <div class="splashbox-icon">
                 <i class="fa fa-smile-o fa-2x"></i>
               </div>
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-o fa-stack-2x"></i>
-                <i class="fa fa-smile-o fa-stack-1x"></i>
-              </span>
             </div>
             <div class="app-box">
               <div class="app-box-header">
@@ -35,10 +31,9 @@ base_url: "../../"
         <div class="col-xs-12 col-sm-4">
           <div class="splashbox">
             <div class="splashbox-header">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-o fa-stack-2x"></i>
-                <i class="fa fa-heart-o fa-stack-1x"></i>
-              </span>
+              <div class="splashbox-icon">
+                <i class="fa fa-heart-o fa-2x"></i>
+              </div>
             </div>
             <div class="app-box">
               <div class="app-box-header">
@@ -55,10 +50,9 @@ base_url: "../../"
         <div class="col-xs-12 col-sm-4">
           <div class="splashbox">
             <div class="splashbox-header">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle-o fa-stack-2x"></i>
-                <i class="fa fa-spinner fa-stack-1x"></i>
-              </span>
+              <div class="splashbox-icon">
+                <i class="fa fa-spinner fa-2x"></i>
+              </div>
             </div>
             <div class="app-box">
               <div class="app-box-header">
