--- a/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
@@ -16,7 +16,7 @@ base_url: "../../"
                 <i class="fa fa-smile-o fa-2x"></i>
               </div>
             </div>
-            <div class="app-box">
+            <div class="app-box" id="app-box-01">
               <div class="app-box-header">
                 <div class="h5 app-box-headline">
                   Unser Angebot an dich
@@ -67,17 +67,6 @@ base_url: "../../"
           </div>
         </div>
       </div>
-    </div>
-    <hr>
-    <div class="app-splashbar text-center">
-      <h5>Sie möchten unsere Arbeit unterstützen?</h5>
-      <p><a class="btn btn-primary btn-lg" href="/spenden">Jetzt Spenden!</a></p>
-      <p class="text-muted">Das klik freut sich auch über Sachspenden wie zum Beispiel saubere Kleidung. Rufen Sie uns bei Fragen hierzu gerne an. </p>
-    </div>
-    <hr>
-    <div class="app-splashbar text-center">
-      <h5>Förderer/Kooperationen</h5>
-      <p class="text-muted">Logobar will be inserted here</p>
     </div>
   </div>
 </main>
