Add newitem listing to frontpage

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
@@ -60,8 +60,10 @@ base_url: "../../"
                   Aktuelles
                 </div>
               </div>
-              <div class="app-box-content">
-                <p>This is a test text for this content block</p>
+              <div class="app-box-content" id="app-box-news">
+                <p class="text-muted">
+                  Im Augenblick liegen keine aktuellen Nachrichten vor
+                </p>
               </div>
             </div>
           </div>
