Update theme template friontpage

--- a/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
+++ b/src/klikev.sitetheme/klikev/sitetheme/resources/frontpage.html
@@ -35,7 +35,7 @@ base_url: "../../"
                 <i class="fa fa-heart-o fa-2x"></i>
               </div>
             </div>
-            <div class="app-box">
+            <div class="app-box" id="app-box-02">
               <div class="app-box-header">
                 <div class="h5 app-box-headline">
                   Du willst helfen
